--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "dayjs": "^1.11.7",
     "houseform": "^1.7.0",
     "next": "^13.2.1",
     "react": "18.2.0",
